--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             </div>
             <div>
                 <h2>Nos contate</h2>
-                <a href="#contatos">formulário</a>
+                <a href="#contatos">Formulário</a>
             </div>
 
 
